[workspace.package]
version = "0.1.0"
authors = ["FITAHIANA Nomeniavo Joe <24nomeniavo@gmail.com>"]
edition = "2021"
readme = "README"
license-file = "LICENSE"
description = "Web scraping library with derive macros"

[workspace]
resolver = "2"
members = ["webhunt", "webhunt-derive", "tests"]

[workspace.dependencies]
reqwest = "0.12.4"
scraper = "0.24.0"

# derive
quote = "1.0.40"
syn = "2.0"
deluxe = "0.5"

webhunt.path = "webhunt"
webhunt-derive.path = "webhunt-derive"
