[package]
name = "webhunt"
version.workspace = true
edition.workspace= true
authors.workspace = true
description.workspace = true
license-file.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest.workspace = true
scraper.workspace = true
webhunt-derive.workspace = true
